--- a/service/SchemaRecognizer/SchemaRecognizer.Debug/SchemaRecognizer.Debug.csproj
+++ b/service/SchemaRecognizer/SchemaRecognizer.Debug/SchemaRecognizer.Debug.csproj
@@ -4,4 +4,8 @@
         <OutputType>Exe</OutputType>
     </PropertyGroup>
     
+    <ItemGroup>
+      <PackageReference Include="PdfPig" />
+    </ItemGroup>
+    
 </Project>
