--- a/service/SchemaRecognizer/Directory.Packages.props
+++ b/service/SchemaRecognizer/Directory.Packages.props
@@ -4,6 +4,8 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageVersion Include="itext" Version="9.4.0" />
+    <PackageVersion Include="itext7" Version="9.4.0" />
+    <PackageVersion Include="itext7.bouncy-castle-adapter" Version="9.4.0" />
     <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="10.0.0" />
     <PackageVersion Include="Microsoft.Extensions.Logging" Version="10.0.0" />
     <PackageVersion Include="Newtonsoft.Json" Version="13.0.4" />
