--- a/service/SchemaRecognizer/SchemaRecognizer.Core/SchemaRecognizer.Core.csproj
+++ b/service/SchemaRecognizer/SchemaRecognizer.Core/SchemaRecognizer.Core.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
     
     <ItemGroup>
+        <PackageReference Include="itext" />
         <PackageReference Include="Newtonsoft.Json" />
         <PackageReference Include="PdfPig" />
         <PackageReference Include="Serilog" />
