--- a/service/SchemaRecognizer/SchemaRecognizer.Core/SchemaRecognizer.Core.csproj
+++ b/service/SchemaRecognizer/SchemaRecognizer.Core/SchemaRecognizer.Core.csproj
@@ -2,6 +2,7 @@
     
     <ItemGroup>
         <PackageReference Include="itext" />
+        <PackageReference Include="itext.bouncy-castle-adapter" />
         <PackageReference Include="Newtonsoft.Json" />
         <PackageReference Include="PdfPig" />
         <PackageReference Include="Serilog" />
