--- a/service/SchemaRecognizer/SchemaRecognizer.Worker/SchemaRecognizer.Worker.csproj
+++ b/service/SchemaRecognizer/SchemaRecognizer.Worker/SchemaRecognizer.Worker.csproj
@@ -5,7 +5,11 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Extensions.Configuration" />
+      <PackageReference Include="Microsoft.Extensions.Configuration.Json" />
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" />
+      <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" />
+      <PackageReference Include="Microsoft.Extensions.Options.DataAnnotations" />
     </ItemGroup>
 
     <ItemGroup>
