--- a/service/SchemaRecognizer/Directory.Packages.props
+++ b/service/SchemaRecognizer/Directory.Packages.props
@@ -18,5 +18,7 @@
     <PackageVersion Include="Serilog" Version="4.3.0" />
     <PackageVersion Include="Serilog.Extensions.Logging" Version="10.0.0" />
     <PackageVersion Include="Serilog.Sinks.Console" Version="6.1.1" />
+    <PackageVersion Include="SkiaSharp" Version="3.119.1" />
+    <PackageVersion Include="SkiaSharp.NativeAssets.Linux" Version="3.119.1" />
   </ItemGroup>
 </Project>
