--- a/service/SchemaRecognizer/SchemaRecognizer.Core/SchemaRecognizer.Core.csproj
+++ b/service/SchemaRecognizer/SchemaRecognizer.Core/SchemaRecognizer.Core.csproj
@@ -1,5 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+    <PropertyGroup>
+      <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+    </PropertyGroup>
+
     <ItemGroup>
         <PackageReference Include="IronPdf" />
         <PackageReference Include="IronPdf.Native.Chrome.Linux" />
